--- a/templates/regions/region--secondary-menu.html.twig
+++ b/templates/regions/region--secondary-menu.html.twig
@@ -21,4 +21,7 @@
   <div class="ucb-mobile-footer-menu">
     {{ drupal_menu('footer') }}
   </div>
+  <div class="ucb-mobile-social-media-menu">
+    {{ drupal_menu('social-media-menu') }}
+  </div>
 </div>
