--- a/css/menu-styles/simple-styles.css
+++ b/css/menu-styles/simple-styles.css
@@ -3,7 +3,13 @@
     gap: 0rem;
     margin-bottom: -4px;
   }
-
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region-container .menu.social-media {
+    gap: 0rem;
+  }
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region-container {
+    align-items: end;
+  }
   .ucb-main-nav-container.ucb-secondary-menu-position-above {
     padding: 20px 0;
   }
@@ -34,15 +40,19 @@
     box-shadow: 0 2px 5px rgba(0 0 0 /10%);
   }
 
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg,
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a {
     color: #aaa;
   }
 
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg:hover,
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a:hover {
     color: #fff;
     background: transparent;
   }
 
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg,
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu li.menu-item a {
     margin-left: .25em;
     margin-right: .25em;
@@ -70,6 +80,12 @@
     color: #363636;
   }
 
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media .icon-bg {
+    color: #363636;
+    display: flex;
+    padding: 2px 10px;
+  }
+  
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a {
     color: #363636;
     display: inline-block;
@@ -77,6 +93,8 @@
     padding: 0 10px;
   }
 
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media .icon-bg:hover,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media .icon-bg:focus,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a:hover,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a:focus {
     color: #fff;
@@ -94,6 +112,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FF555555', EndColorStr='#FF333333');
   }
 
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media .icon-bg a.is-active,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.is-active,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item.active a:first-of-type {
     background-color: #cfb87c;
@@ -167,5 +186,15 @@
   .ucb-main-menu li.menu-item a.nav-link.is-active,
   .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
     color: #000;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media li {
+    display: flex;
+    align-items: center;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media {
+    height: 100%;
+    padding-right: 10px;
   }
 }
