--- a/css/menu-styles/minimal-styles.css
+++ b/css/menu-styles/minimal-styles.css
@@ -12,9 +12,17 @@
     color: #757575;
     display: inline-block;
     border-bottom: 4px solid #fff;
-    padding-left: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
+  .ucb-main-nav-section .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media .icon-bg{
+    height: calc(100% - 4px);
+  }
+  .ucb-main-nav-section .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu.social-media{
+    height: 100%;
+  }
+  
   .ucb-main-menu li.menu-item a.nav-link {
     margin: 0;
     border-bottom: none;
